# xcom-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  VALIDATION_REPORT.md  verify_acceptance.sh
.claude/skills/example-skill/: SKILL.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md
Formula/: xcom_rs.rb
docs/: README.md  examples.md
docs/implementation/: install-skills.md  merged-features.md
docs/validation/: plan-headless-auth-and-billing.md
examples/: auth_billing_demo.sh
openspec/changes/add-auth-import-dry-run/: design.md  tasks.md
openspec/changes/add-doctor-diagnostics/: tasks.md
openspec/changes/add-engagement-actions/: proposal.md  tasks.md
openspec/changes/add-install-skills-command/: tasks.md
openspec/changes/add-media-upload/: proposal.md  tasks.md
openspec/changes/add-oauth1a-auth/: design.md  proposal.md  tasks.md
openspec/changes/add-oauth2-login/: tasks.md
openspec/changes/add-reply-thread-conversation/: design.md  tasks.md
openspec/changes/add-search-commands/: design.md  tasks.md
openspec/changes/add-shell-completions/: design.md  tasks.md
openspec/changes/add-timeline-commands/: design.md  proposal.md  tasks.md
openspec/changes/align-default-output-text/: proposal.md  tasks.md
openspec/changes/align-module-layout/: proposal.md  tasks.md
openspec/changes/centralize-cli-errors/: proposal.md  tasks.md
openspec/changes/design-agentic-cli-core/: tasks.md
openspec/changes/eliminate-cli-panics/: design.md  tasks.md
openspec/changes/enhance-doctor-diagnostics/: proposal.md  tasks.md
openspec/changes/enhance-doctor-probe/: design.md  proposal.md  (+1 more)
scripts/: update_homebrew_formula.sh
skills/example-skill/: SKILL.md
skills/test-skill/: SKILL.md
src/: auth.rs  billing.rs  cli.rs  context.rs  doctor.rs  errors.rs  introspection.rs  lib.rs  logging.rs  main.rs  output.rs  protocol.rs  test_utils.rs
src/auth/: login.rs  mod.rs  models.rs  oauth1a.rs  oauth2.rs  storage.rs
src/billing/: mod.rs  models.rs  storage.rs
src/bookmarks/: commands.rs  mod.rs
src/handlers/: auth.rs  billing.rs  bookmarks.rs  completion.rs  demo.rs  doctor.rs  introspection.rs  media.rs  mod.rs  search.rs  skills.rs  timeline.rs  tweets.rs
src/introspection/: help.rs  mod.rs  registry.rs  schema.rs
src/media/: commands.rs  mod.rs  models.rs
src/search/: commands.rs  mod.rs  models.rs
src/skills/: discovery.rs  install.rs  mod.rs  models.rs
src/timeline/: commands.rs  commands.rs.bak  mod.rs  models.rs
src/tweets/: client.rs  commands.rs  http_client.rs  ledger.rs  mod.rs  models.rs
src/x_api/: client.rs  error.rs  mod.rs
tests/: auth_billing_test.rs  http_integration.rs  integration_test.rs  tweets_integration_test.rs  xdg_paths_test.rs
tests/common/: test_utils.rs
(+236 files in other folders)
