[package]
name = "xcom-rs"
version = "0.1.14"
edition = "2021"
rust-version = "1.70"
description = "Agent-friendly X.com CLI with introspection, auth, billing, tweets, and embedded skills"
license = "MIT"
readme = "README.md"
keywords = ["cli", "automation", "agents", "twitter", "xcom"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
tempfile = "3.10"

[dev-dependencies]
mockito = "1.5"

[features]
env-tests = []
