[package]
name = "xcom-rs"
version = "0.1.36"
edition = "2021"
rust-version = "1.70"
description = "Agent-friendly X.com CLI with introspection, auth, billing, tweets, and embedded skills"
authors = ["tumf <tumf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cli", "automation", "agents", "twitter", "xcom"]
categories = ["command-line-utilities"]
repository = "https://github.com/tumf/xcom-rs"
homepage = "https://github.com/tumf/xcom-rs"
documentation = "https://docs.rs/xcom-rs"
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**",
    "tests/**",
    "examples/**",
    "docs/**",
    "skills/**",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
tempfile = "3.10"
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"
base64 = "0.22"
url = "2.5"
tiny_http = "0.12"
oauth1-request = "0.6"
hmac = "0.12"
sha1 = "0.10"

[dev-dependencies]
mockito = "1.5"

[lib]
doctest = false

[features]
env-tests = []
